[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { path = "../bevy", default-features = false, version = "0.10.0"}
crossterm = "0.26.1"
log = "0.4.17"
log4rs = "1.2.0"
once_cell = "1.17.1"
shutdown_hooks = "0.1.0"
signal-hook = "0.3.15"

# Enable a small amount of optimization in debug mode
#[profile.dev]
#opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
#[profile.dev.package."*"]
#opt-level = 3